Update Emarsys documentation.

--- a/section/captureData/emarsys.mdx
+++ b/section/captureData/emarsys.mdx
@@ -1,20 +1,21 @@
 ---
-title: 'Emarsys'
-description: 'Start building loyal communities with targeted, gated offers.'
-icon: 'fa-fw'
+title: "Emarsys"
+description: "Start building loyal communities with targeted, gated offers."
+icon: "fa-fw"
 ---
 
-Once the user submits their email and/or mobile number, Gocertify will send this data your Emarsys account, creating (or updating) a *Contact*, with the “Opt-in” field set as `True`. Gocertify will also trigger an *External Event* called `gocertify_consent_intent`, which can be used to create automations.
+Once the user submits their email and/or mobile number, Gocertify will send this data your Emarsys account, creating (or updating) a _Contact_, with the “Opt-in” field set as `True`. Gocertify will also trigger an _External Event_ called `gocertify_consent_intent`, which can be used to create automations.
 
-After that screen, when the user successfully verifies as a target group (student, healthcare, senior, etc), Gocertify will update the Contact, setting a new field called “gocertify_student_verified_at” with the current date, useful to generate *Segments*. 
+After that screen, when the user successfully verifies as a target group (student, healthcare, senior, etc), Gocertify will update the Contact, setting a new field called “gocertify*student_verified_at” with the current date, useful to generate \_Segments*.
 Gocertify will also trigger another External Event called `gocertify_offer_claimed`, that can be used to initiate another automation.
 
 ## Requirements to go live
+
 To start syncing data you'll need to create a new API user and share the details with your Gocertify account manager.
 
 <Accordion title="See step by step tutorial">
     <Steps>
-        <Step title="Create a new API user">
+        <Step title="Create a new API Credentials">
             Sign into [Emarsys](https://login.emarsys.net/bootstrap.php?r=customer/Login) and in the sidebar menu, click in “Management” and then choose “Security Settings”.
             <img
             className="block dark:hidden"
@@ -30,33 +31,50 @@ To start syncing data you'll need to create a new API user and share the details
             />
 
         </Step>
-        <Step title="Create a new API user">
-        In the Security Settings module, choose the “API” icon in the left and then click on “Create API user”. Then confirm the creation.
+        <Step title="Create a new API Credentials">
+        In the Security Settings module, choose the “API” icon in the left and then click on “Create API Credentials”. Then confirm the creation.
 
         <img
         className="block dark:hidden"
-        src="/images/emarsysAPIUser.png"
-        alt="Emarsys API user"
+        src="/images/emarsysAPICredentials.png"
+        alt="Emarsys API Credentials"
         style={{ borderRadius: '0.5rem' }}
         />
         <img
         className="hidden dark:block"
-        src="/images/emarsysAPIUser.png"
+        src="/images/emarsysAPICredentials.png"
+        alt="Emarsys API Credentials"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        </Step>
+        <Step title="Choose the OpenID connect">
+        Select "OpenID Connect" from the credentials type options.
+
+        <img
+        className="block dark:hidden"
+        src="/images/emarsysAPICredentialsChoose.png"
+        alt="Emarsys API Credentials"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/emarsysAPICredentialsChoose.png"
         alt="Emarsys API user"
         style={{ borderRadius: '0.5rem' }}
         />
         </Step>
-        <Step title="Copy the API key">
-        Copy the User name and Secret from this interface
+
+        <Step title="Copy Credentials">
+        Copy Client ID, Client Secret and Token endpoint
         <img
         className="block dark:hidden"
-        src="/images/emarsysAPIkey.png"
+        src="/images/emarsysOpenIDUser.png"
         alt="Emarsys API key"
         style={{ borderRadius: '0.5rem' }}
         />
         <img
         className="hidden dark:block"
-        src="/images/emarsysAPIkey.png"
+        src="/images/emarsysOpenIDUser.png"
         alt="Emarsys API key"
         style={{ borderRadius: '0.5rem' }}
         />
@@ -64,7 +82,7 @@ To start syncing data you'll need to create a new API user and share the details
         </Step>
 
         <Step title="Share the user details with Gocertify">
-        Go to onetimesecret.com and paste the copied user email and the password. Even if it's not required, we encourage you to also add a random “Passphrase”. 
+        Go to onetimesecret.com and paste the copied user email and the password. Even if it's not required, we encourage you to also add a random “Passphrase”.
         This will generate a secret link that will expire within 7 days and will be visible only once.
 
         Share this link with your Customer Success Manager, we will set this User name and Secret in our systems to continue the integration
@@ -83,30 +101,28 @@ To start syncing data you'll need to create a new API user and share the details
         />
 
     </Step>
-    <Step title="Edit API user">
+    <Step title="Edit API Credentials">
     In the list of all your API users, go to the one you just created and click on the Edit (the pen) icon.
     <img
     className="block dark:hidden"
-    src="/images/emarsysEditAPIUser.png"
-    alt="Emarsys edit API user"
+    src="/images/emarsysAPICredentials.png"
+    alt="Emarsys edit API Credentials"
     style={{ borderRadius: '0.5rem' }}
     />
     <img
     className="hidden dark:block"
-    src="/images/emarsysEditAPIUser.png"
-    alt="Emarsys edit API user"
+    src="/images/emarsysAPICredentials.png"
+    alt="Emarsys edit API Credentials"
     style={{ borderRadius: '0.5rem' }}
     />
     </Step>
 
-    <Step title="Authorise the API user">
-    <Tip>On May 1st 2025 we added a new permission to this list (`contact.list`). If you integrated before this date, you will need to add it manually.</Tip>
-
+    <Step title="Authorise the API Credentials">
     Authorise the API user to do all the automations we described in the overview, enabling all the checkboxes shown below:
     <img
     className="block"
-    src="/images/emarsysContactAuthorisation.png"
-    alt="Emarsys contact authorisation"
+    src="/images/emarsysPermissions.png"
+    alt="Emarsys Permissions"
     style={{ borderRadius: '0.5rem' }}
     />
     </Step>
@@ -138,11 +154,12 @@ To start syncing data you'll need to create a new API user and share the details
     </Step>
 
     </Steps>
+
 </Accordion>
 
 ## How data will appear in Emarsys
 
-Once the user shares their information with your brand, you will see a new Contact in your base, with the email and mobile_number (if it's enabled) and the respective Opt-in fields set as *true* (*Opt-in* and *Mobile SMS Opt-In*).
+Once the user shares their information with your brand, you will see a new Contact in your base, with the email and mobile*number (if it's enabled) and the respective Opt-in fields set as \_true* (_Opt-in_ and _Mobile SMS Opt-In_).
 
 Together with the creation (update) of the Contact, Gocertify will create and trigger an External event, called “gocertify_consent_intent”. After the user verifies themself, Gocertify will update the Contact in your base, adding as many “gocertify_xxx_verified_at” fields as needed, with the current date.
 
@@ -154,7 +171,7 @@ Together with the creation (update) of the Contact, Gocertify will create and tr
   pending_group_parent: "Key Worker",   // ← might not be present
   pending_group_child: "NHS Worker",    // ← might not be present
   token: "ABCD1234",                    // ← our internal randomly generated identifier
-  subid: "user_1",                      // ← optional, for custom tracking           
+  subid: "user_1",                      // ← optional, for custom tracking
   brand_slug: "amazon",                 // ← the identifier of the customer
   brand_country: "GB",                  // ← the country set in our system
   user_country: "GB",                   // ← the user's country (based on their mobile number, if shared)
@@ -172,7 +189,7 @@ Together with the creation (update) of the Contact, Gocertify will create and tr
   group_parent: "Key Worker",           // ← might not be present
   group_child: "NHS Worker",            // ← might not be present
   token: "ABCD1234",                    // ← our internal randomly generated identifier
-  subid: "user_1",                      // ← optional, for custom tracking           
+  subid: "user_1",                      // ← optional, for custom tracking
   brand_slug: "amazon",                 // ← the identifier of the customer
   brand_country: "GB",                  // ← the country set in our system
   user_country: "GB",                   // ← the user's country (based on their mobile number, if shared)
@@ -189,18 +206,18 @@ Together with the creation (update) of the Contact, Gocertify will create and tr
 Within your account you will see the shopper:
 
 <Frame caption="Example shopper profile within Emarsys">
-    <img
+  <img
     className="block dark:hidden"
     src="/images/emarysysShopper.png"
     alt="Example shopper"
-    style={{ borderRadius: '0.5rem' }}
-    />
-    <img
+    style={{ borderRadius: "0.5rem" }}
+  />
+  <img
     className="hidden dark:block"
     src="/images/emarysysShopper.png"
     alt="Example shopper"
-    style={{ borderRadius: '0.5rem' }}
-    />
+    style={{ borderRadius: "0.5rem" }}
+  />
 </Frame>
 
 ## How to create segments in Emarsys
@@ -210,18 +227,18 @@ Once you start receiving data from Gocertify, you will be able to set all the Se
 In the side menu, go to “Contacts” > “Segments” and then create a new one. In the Criteria filter, you will have all the “gocertify_xxx_verified_at” fields. Depending on your needs, you can use one, or many conditions.
 
 <Frame caption="Example of how to segment Gocertify shoppers within Emarsys">
-    <img
+  <img
     className="block dark:hidden"
     src="/images/emarsysSegmentation.png"
     alt="Emarsys segmentation"
-    style={{ borderRadius: '0.5rem' }}
-    />
-    <img
+    style={{ borderRadius: "0.5rem" }}
+  />
+  <img
     className="hidden dark:block"
     src="/images/emarsysSegmentation.png"
     alt="Emarsys segmentation"
-    style={{ borderRadius: '0.5rem' }}
-    />
+    style={{ borderRadius: "0.5rem" }}
+  />
 </Frame>
 
 If you want to create a Segment with all the Contacts verified through Gocertify, you will need to define that “any of those fields” is not empty.
