Add caution note regarding API secret visibility in Emarsys documentation

--- a/section/captureData/emarsys.mdx
+++ b/section/captureData/emarsys.mdx
@@ -79,6 +79,11 @@ To start syncing data you'll need to create a new API user and share the details
         style={{ borderRadius: '0.5rem' }}
         />
 
+        <div style={{ background: '#FFF4E5', border: '1px solid #FFA726', borderLeft: '4px solid #FF5722', color: '#BF360C', padding: '1rem', borderRadius: '0.5rem', margin: '1rem 0', fontWeight: 500, display: 'flex', alignItems: 'flex-start', gap: '0.5rem' }}>
+          <div style={{ color: '#FF5722', fontSize: '1.2rem', fontWeight: 'bold', marginTop: '0.1rem' }}>⚠️</div>
+          <div><strong style={{ color: '#BF360C' }}>Caution:</strong> Please note that, as the orange warning strip at the top indicates, this is the only time this secret is displayed. If you navigate away from this page without making a note of it, it is impossible to retrieve the secret and new credentials have to be generated.</div>
+        </div>
+
         </Step>
 
         <Step title="Share the user details with Gocertify">
