Add minor change.

--- a/section/captureData/emarsys.mdx
+++ b/section/captureData/emarsys.mdx
@@ -87,7 +87,7 @@ To start syncing data you'll need to create a new API user and share the details
         </Step>
 
         <Step title="Share the user details with Gocertify">
-        Go to onetimesecret.com and paste the copied user email and the password. Even if it's not required, we encourage you to also add a random “Passphrase”.
+        Go to onetimesecret.com and paste the copied Client ID and Client Secret. Even if it's not required, we encourage you to also add a random “Passphrase”.
         This will generate a secret link that will expire within 7 days and will be visible only once.
 
         Share this link with your Customer Success Manager, we will set this User name and Secret in our systems to continue the integration
