Documented reward guardrails

--- a/section/buildRewardFlows/rewardGuardrails.mdx
+++ b/section/buildRewardFlows/rewardGuardrails.mdx
@@ -4,8 +4,12 @@ description: 'Set limits on how often shoppers can redeem rewards.'
 icon: 'timeline'
 ---
 
-Gocertify makes it easy to set limits on how often shoppers can redeem rewards. This is useful for protecting your rewards from abuse and ensuring they are only redeemed by eligible shoppers.
+Gocertify makes it easy to set limits on how often and when shoppers can redeem rewards. This is useful for protecting your rewards from abuse and ensuring they are only redeemed by eligible shoppers.
 
+## Gate rewards by country
+Limit the redemption of rewards to shoppers in certain countries. Reach out to your account manager to enable this feature for your account. 
+
+## Limit the number of times a reward can be redeemed
 Set up a limit by asking your Gocertify account manager to enable the feature for your account.
 
 <Frame caption="Set a limit on how often a reward can be redeemed.">
