--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -14,6 +14,9 @@ Integrate Gocertify by adding the following Gocertify <Tooltip tip="Our script i
 <Tip>
   Remember to replace `example-company` with your actual company name in the script below.
 </Tip>
+<Tip>
+  Make sure the script is implemented site-wide to access all our features.
+</Tip>
 
 ```javascript gocertify-script
         <script>
