--- a/section/promoteOffers/osmVisibility.mdx
+++ b/section/promoteOffers/osmVisibility.mdx
@@ -66,4 +66,7 @@ You can add multiple rules to a placement to combine these rules to match your c
   
   Alternatively leverage the CSS selector to anchor inline placements to an element that only shows on non-sale products.
   </Accordion>
+  <Accordion title="Only show on to users in certain countries" icon="earth-americas">
+  Reach out to your account manager to enable this feature. Placement will only show when to shoppers with IPs from that country.
+  </Accordion>
 </AccordionGroup>
