--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -3,6 +3,15 @@ title: Product Updates
 description: 'The newest features and improvements from Gocertify'
 ---
 
+<Update label="September 2025" description="">
+  ## Fresh Dashboard Design
+  <Frame>
+        <img src="/images/changelog/Dashboard.png" alt="Fresh Dashboard Design" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Our refreshed dashboard design makes it easier to run smart and meaningful rewards! Enjoy simpler navigation, enhanced data visualisation, and streamlined campaign management tools.
+  
+</Update>
+
 <Update label="June 2025" description="">
   ## Yotpo Integration
   <Frame>
