--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -55,7 +55,7 @@ description: 'The newest features and improvements from Gocertify'
 <Update label="February 2025" description="">
   ## New custom OSM Visibility rules
   <Frame>
-        <img src="/images/osm/osmScriptVisibilityRule.png" alt="Path rule" width="100%" style={{ borderRadius: '0.5rem' }} />
+        <img src="/images/osm/Custom_OSM_visibility_rules.png" alt="Path rule" width="100%" style={{ borderRadius: '0.5rem' }} />
   </Frame>
   Use JavaScript to define your _own visibility rules_ based on **any data** available   or in your datalayer.
   For example, you could create a custom rule to only show an offer to shoppers who have a certain basket value, helping drive an increase in AoV.
@@ -67,7 +67,7 @@ description: 'The newest features and improvements from Gocertify'
   ## Multiple choice custom fields
 
   <Frame>
-    <img src="/images/customFields/customfield-multiSelect.png" alt="Multiple choice custom fields" />
+    <img src="/images/customFields/custom_fields_for_datacapture.png" alt="Multiple choice custom fields" />
   </Frame>
 
   [DataCapture](/section/captureData/overview) now supports [multiple choice](/section/captureData/customFields#multi-select) custom fields. Collect deeper insights on your shoppers and drive more impactful downstream marketing campaigns.
@@ -443,7 +443,7 @@ description: 'The newest features and improvements from Gocertify'
 <Update label="June 2020" description="">
   ## Webcam ID Scanner
   <Frame>
-    <img src="/images/changelog/webcam-image.gif" alt="Webcam ID Scanner" />
+    <img src="/images/changelog/Webcam_ID_scanner.png" alt="Webcam ID Scanner" />
   </Frame>
   Your users can now take a picture of their ID with their webcam. No need for them to a take picture on their phone and transfer to their desktop with our new uploader.
   
