--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -9,7 +9,32 @@ description: 'The newest features and improvements from Gocertify'
         <img src="/images/changelog/Dashboard.png" alt="Fresh Dashboard Design" width="100%" style={{ borderRadius: '0.5rem' }} />
   </Frame>
   Our refreshed dashboard design makes it easier to run smart and meaningful rewards! Enjoy simpler navigation, enhanced data visualisation, and streamlined campaign management tools.
-  
+
+</Update>
+
+
+<Update label="August 2025" description="">
+
+  ## Direct Transaction Tracking
+  <Frame>
+    <img src="/images/changelog/Direct-Transaction-Tracking.png" alt="Direct Transaction Tracking" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Track transactions directly, without an affiliate network, to measure reward strategy performance
+
+  - Connect transactions to Gocertify offers for clearer performance insights
+  - Measure actual revenue and order details to validate discount impact
+  - Optimise future campaigns with trustworthy, first-party conversion data
+</Update>
+
+<Update label="July 2025" description="">
+  ## AB Testing
+  <Frame>
+    <img src="/images/changelog/AB-Testing.png" alt="AB Testing" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Optimise your reward strategies with data-driven A/B testing
+
+  - Compare different discount percentages, messaging approaches, and positioning to identify what works
+  - Measure the impact of changes on your core KPIs
 </Update>
 
 <Update label="June 2025" description="">
