--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -3,6 +3,23 @@ title: Product Updates
 description: 'The newest features and improvements from Gocertify'
 ---
 
+<Update label="October 2025" description="">
+  ## 2FA for all accounts
+  <Frame>
+        <img src="/images/dashboard/dashboardAccess/2FA/2FA.png" alt="2FA" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  All accounts are now secured with two-factor authentication (2FA) by default. If you use SSO, 2FA will be managed by your provider, if you use email/password 2FA will be enforced with an email based OTP.
+  See more information in [dashboard access](/section/gettingStarted/dashboardAccess).
+
+  ## Single Sign-On (SSO)
+  <Frame>
+        <img src="/images/dashboard/dashboardAccess/SSO/Single_Sign-On.png" alt="Single Sign-On (SSO)" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Sign in to the dashboard with your Microsoft 365 or Google accounts!
+  Find more information in the [Single Sign-On (SSO)](/section/gettingStarted/dashboardAccess) section.
+    
+</Update>
+
 <Update label="September 2025" description="">
   ## Fresh Dashboard Design
   <Frame>
