Added shopify discounts

--- a/section/buildRewardFlows/discounts.mdx
+++ b/section/buildRewardFlows/discounts.mdx
@@ -25,7 +25,18 @@ preferred ecommerce platform or promotion service.
         Install the [Gocertify Shopify app](/section/gettingStarted/integrateOnSite#shopify) by requesting a link from your Gocertify account manager.
         </Step>
         <Step title="Create a discount">
-            Create a discount in Shopify and name it using the following convention: `GC-campaignSlug-discountPercentage`, i.e. `GC-keyWorkers-20` for a 20% discount targeted at key workers. 
+            Create a discount in Shopify and name it using the following convention: `GC-campaignSlug-discountPercentage`, i.e. `GC-keyWorkers-20` for a 20% discount targeted at key workers.
+
+            <Frame>
+              <iframe
+                src="https://www.loom.com/embed/c323f6fefdcf4aa6941507701a34eca2?sid=d70cb681-c0af-42ed-a030-e59702175e61"
+                frameborder="0"
+                webkitallowfullscreen
+                mozallowfullscreen
+                allowfullscreen
+                style={{ width: '100%', height: '400px' }}
+              ></iframe>
+            </Frame>
         </Step>
         <Step title="Set the discount settings">
             - Check the option `Limit the number of times this discount code can be used` and set it to `1`. 
