added additional loom

--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -131,6 +131,19 @@ Tag managers let you can easily add the Gocertify script site-wide without needi
           <img src="/images/integrations/ecommerce/shopify/shopify-enablescript-screen2.png" alt="Shopify connect screen" />
         </Frame>
       </Step>
+      <Step title="Add on-site messaging">
+        Once you have enabled the embed script, you can use Shopify Blocks to add on-site messaging to your site.
+        <Frame>
+          <iframe
+            src="https://www.loom.com/embed/f0751b810299485c958d8412c872ded8?sid=c34ab8ef-9432-4dc6-a7bb-6f16f96dda90"
+            frameborder="0"
+            webkitallowfullscreen
+            mozallowfullscreen
+            allowfullscreen
+            style={{ width: '100%', height: '400px' }}
+          ></iframe>
+        </Frame>
+      </Step>
     </Steps>
   </Accordion>
 
