Added offer eligibility release

--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -26,7 +26,12 @@ description: 'The newest features and improvements from Gocertify'
         <img src="/images/changelog/Dashboard.png" alt="Fresh Dashboard Design" width="100%" style={{ borderRadius: '0.5rem' }} />
   </Frame>
   Our refreshed dashboard design makes it easier to run smart and meaningful rewards! Enjoy simpler navigation, enhanced data visualisation, and streamlined campaign management tools.
-
+  ## Limit offer eligibility to specific countries
+  <Frame>
+        <img src="/images/changelog/limit_offer_eligibility_to_specific_countries.png" alt="Limit offer eligibility to specific countries" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Switch on country level targeting to ensure that rewards are only available to shoppers within in your target markets. To take this even further, you can now add a new OSM visibility rule that limits which countries your on-site messages will be promoted within.
+  
 </Update>
 
 
