Updated visibility rules to state up to 30

--- a/section/promoteOffers/osmVisibility.mdx
+++ b/section/promoteOffers/osmVisibility.mdx
@@ -49,7 +49,7 @@ The OSM visibility toolkit lets you control exactly when and where your offers a
 
 
 ## Popular Visibility Rule Use Cases
-You can add multiple rules to a placement to combine these rules to match your campaign objectives. All rules need to be met for the offer to be displayed.
+You can add up to 30 rules to a placement to combine these rules to match your campaign objectives. All rules need to be met for the offer to be displayed.
 
 <img src="/images/osm/visibility-rule.png" alt="Setting visibility rules" style={{ borderRadius: '0.5rem' }} />
 
