Updated overview and added to changelog

--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -2,6 +2,21 @@
 title: Product Updates
 description: 'The newest features and improvements from Gocertify'
 ---
+<Update label="November 2025" description="">
+  ## Set up to 30 visibility rules for on-site messages
+  You can now add up to 30 visibility rules against a given OSM placement (increasing the limit from 20). This gives you more flexibility when setting up campaigns that need to appear on multiple specific pages, reducing the need to create separate campaigns or use more complex targeting methods.
+  See more information in [osm visibility](https://docs.gocertify.me/section/promoteOffers/osmVisibility#visibility-toolkit).
+
+  ## Improved tracking link signature handling to support URLs with nested query parameters
+  You can now use tracking links with nested query parameters in your campaigns. Previously, the system couldn't properly sign URLs where query strings were embedded within the path (like `destination:https%3A%2F%2Fexample.com%2F%3Fparam%3Dvalue`), which meant some affiliate network tracking links wouldn't work correctly. This improvement ensures your tracking links are properly secured and function as expected, giving you more flexibility when setting up affiliate network integrations.
+  See more information in [affiliate tracking](https://docs.gocertify.me/section/trackImpact/affiliateTracking).
+
+  ## Other Improvements:
+  - Improved how [Advanced Targeting](https://docs.gocertify.me/section/promoteOffers/advancedTargeting#advanced-targeting) handles missing targets
+  - Shoppers will now see a clear manual review message when restricted by your [reward guardrails](https://docs.gocertify.me/section/buildRewardFlows/rewardGuardrails#reward-guardrails)
+
+  
+</Update>
 
 <Update label="October 2025" description="">
   ## 2FA for all accounts
@@ -17,6 +32,10 @@ description: 'The newest features and improvements from Gocertify'
   </Frame>
   Sign in to the dashboard with your Microsoft 365 or Google accounts!
   Find more information in the [Single Sign-On (SSO)](/section/gettingStarted/dashboardAccess) section.
+
+  ## Advanced Targeting savings calculator
+  [Advanced targeting](/section/promoteOffers/advancedTargeting) lets you run campaigns on specific products or pages by defining custom identifiers (like SKUs) and variables that aren't available in your standard data layer. Advanced targeting can now pull pricing data from multiple sources to ensure the displayed discount reflects the best available information. This means shoppers will see the correct savings amount even when promotional prices vary across different parts of your site.
+
     
 </Update>
 
